@@ -1,0 +1,1 @@
+/usr/lib/swi-prolog/lib/jpl.jar /usr/share/java/jpl.jar
